Really add WARN_UNUSED_RESULT to leakRef https://bugs.webkit.org/show_bug.cgi?id=42464

Reviewed by David Levin.

JavaScriptCore:

* wtf/PassRefPtr.h:
(WTF::PassRefPtr::):
(WTF::NonNullPassRefPtr::):
Put the WARN_UNUSED_RESULT attribute at the right place.

* wtf/RetainPtr.h:
(WTF::RetainPtr::releaseRef):
Remove WARN_UNUSED_RESULT here for now, it leads to two warnings that need
to be fixed first.

WebCore:

Get rid of a call to releaseRef here by passing the ScriptExecutionContext
reference through to the DerefContextTask.

* storage/Database.cpp:
(WebCore::DerefContextTask::create):
(WebCore::DerefContextTask::performTask):
(WebCore::DerefContextTask::DerefContextTask):
(WebCore::Database::~Database):

Canonical link: https://commits.webkit.org/54402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63562 268f45cc-cd09-0410-ab3c-d52691b4dbfc